--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
+      <label fullname></label>
+      
+      
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
