--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
     <form>
-      <label fullname></label>
-      
-      
+      <label for="fullname"></label>
+      <input id="fullname" type="text" name="fullName" placeholder="Enter Name" required>
+    </form>
+    <form>
+      <label for="email"></label>
+      <input id="email" type="email" name="email" placeholder="Enter Email" required>
+    </form>
+
+    <form>
+      <label for="phone">Enter your phone number:</label>
+
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
+    </form>
+
+    <form>
+      <label for="message"></label>
+      <textarea id="message" placeholder="Enter Message"></textarea>
+
+</form>
+
+      <input id="checkbox" type="checkbox">
+
+    <form>
+      <input type="submit"></input>
     </form>
 
 
